--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -39,16 +39,13 @@ body{
     height:40pt;
 }
 
-.collapse .navbar-nav{
-    padding-left: 82%;
+.navbar .container{
+    margin-left: 0%;
+    margin-right: 0%;
 }
 
 .collapse .navbar-nav .nav-item{
     padding-right: 20px;
-}
-
-.navbar .container{
-    margin-left: 0%;
 }
 
 .konten{
@@ -88,7 +85,19 @@ body{
 #background1 p{
     font-family: 'PNovareg';
     font-size: 24pt;
+}
+
+#background1 p .btn{
     color:black;
+    border-radius:0rem;
+    border-color:black;
+    border-width:2pt
+}
+
+#background1 p .btn:hover{
+    color: white;
+    background-color: black;
+    border-color: black;
 }
 
 .tengah{
@@ -135,30 +144,26 @@ body{
     top:0;
     background:url(../../img/back2.png) no-repeat;
     background-size:100%;
-    height: 50%;
-    width: 100%;
+    max-height: 678px;
+    max-width: 100%;
 }
 
 #background2 .container-fluid{
     background: rgb(0, 0, 0, 0.5);
-    height: 96%;
-    width: 100%;
-}
-
-#background2 .container-fluid .row .col{
-    margin-top: 8%;
-    margin-left: 5%;
-    margin-right: 5%;
+    max-height: 678px;
 }
 
 #background2 h2{
+    margin:90px 50px 20px 50px;
     font-family: "PNovasbold";
-    font-size: 35pt;
+    font-size: 32pt;
     color: #ffffff;
     text-align: left;
 }
 
 #background2 p{
+    line-height: 1.3;
+    margin:30px 100px 65px 50px;
     font-family: "PNovareg";
     font-size: 16pt;
     color: #ffffff;
@@ -228,7 +233,9 @@ body{
 }
 
 #page5 .container{
-    padding-left: 25%;
+    margin-left: 28.5%;
+    margin-right: 28.5%;
+    width: auto;
 }
 
 #page5 h4{
@@ -261,6 +268,7 @@ body{
 
 #foot h4{
     font-family: "PNovareg";
+    font-weight: 700;
     padding-top:5%;
     color: white;
 }
@@ -268,12 +276,23 @@ body{
 #foot a{
     font-family: "PNovareg";
     color: white;
+    line-height: 1.0;
 }
 
 #foot p{
     font-family: "PNovasbold";
+    font-size: 10pt;
     color:white;
     padding-top:3%;
     padding-bottom: 1%;
+    margin-bottom: 0;
+}
+
+#foot h5{
+    font-family: "PNovareg";
+    font-size: 13pt;
+    color:white;
+    padding-top:3%;
+    padding-bottom: 3%;
     margin-bottom: 0;
 }
