--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -13,6 +13,14 @@ body{
     src: url("../../font/Proxima Nova-Sbold.otf");
 }
 
+.carousel-control-prev-icon {
+    background-image: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' fill='%23000' viewBox='0 0 8 8'%3E%3Cpath d='M5.25 0l-4 4 4 4 1.5-1.5-2.5-2.5 2.5-2.5-1.5-1.5z'/%3E%3C/svg%3E");
+}
+
+.carousel-control-next-icon {
+    background-image: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' fill='%23000' viewBox='0 0 8 8'%3E%3Cpath d='M2.75 0l-1.5 1.5 2.5 2.5-2.5 2.5 1.5 1.5 4-4-4-4z'/%3E%3C/svg%3E");
+}
+
 #nav{
     height: 70px;
     background: transparent;
@@ -34,9 +42,10 @@ body{
 }
 
 #nav a.logo{
-    background:url(../../img/logoa.png) no-repeat;
-    width: 25%;
-    height:40pt;
+    background:url(../../img/SWProductionBlack.png) no-repeat;
+    background-size:100%;
+    width:15%;
+    height:40px;
 }
 
 .navbar .container{
@@ -69,7 +78,7 @@ body{
 }
 
 #background1{
-    background:url(../../img/back1.png) no-repeat;
+    background:url(../../img/Background1.png) no-repeat;
     background-size:100%;
     width: 100%;
     height: 100%;
@@ -142,15 +151,10 @@ body{
 #background2{
     left: 0;
     top:0;
-    background:url(../../img/back2.png) no-repeat;
+    background:url(../../img/Background2.png) no-repeat;
     background-size:100%;
     max-height: 678px;
     max-width: 100%;
-}
-
-#background2 .container-fluid{
-    background: rgb(0, 0, 0, 0.5);
-    max-height: 678px;
 }
 
 #background2 h2{
@@ -192,21 +196,19 @@ body{
 
 #page3 .container .row.partner img{
     padding-top: 15%;
-    max-width:55%
-}
-
-#page3 .container .row.partner2 .col-lg-4 img{
-    max-width:100%;
-}
-
-#page3 #slidepartner .carousel-inner .carousel-item{
-    height: 50%;
+    max-width:75%
 }
 
 #page4 .container-fluid.atas{
-    background: #ffffff;
-    height: 96%;
+    background:transparent;
+    height: 100%;
     width: 100%;
+    padding:0px 0px;
+}
+
+#page4 .container-fluid.atas img{
+    width:100%;
+    height:100%;
 }
 
 #page4 .container-fluid.bawah{
