--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -158,16 +158,15 @@ body{
     padding-left: 0px;
 }
 
-#Portofolio .container-fluid.atas{
-    background:transparent;
-    height: 100%;
-    width: 100%;
-    padding:0px 0px;
-}
-
 #Portofolio .container-fluid.atas img{
     width:100%;
-    height:100%;
+    height: 300px;
+    max-height:210px;
+}
+
+#Portofolio .container-fluid.atas .col-sm-4{
+    padding-right: 0px;
+    padding-left: 0px;
 }
 
 #Portofolio .container-fluid.bawah{
@@ -187,6 +186,7 @@ body{
     margin-top:20%;
     color: #ffffff;
 }
+
 #Portofolio .container-fluid.bawah p{
     margin-top:10%;
     color: #ffffff;
@@ -244,8 +244,9 @@ body{
 }
 
 
-#foot .container-fluid .row .col-sm-3{
-    margin-left: 30px;
+#foot .container-fluid .row .col-sm-3,
+#foot .container-fluid p{
+    margin-left: 40px;
 }
 
 #foot h4{
@@ -287,6 +288,10 @@ body{
     border-width:2pt; 
     padding: 0.3rem 1.5rem;
 }
+
+/*========================================
+layar kecil
+==========================================*/
 
 @media screen and (max-width: 500px){
     #nav a.logo{
