--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -298,37 +298,36 @@ body{
 /*========================================
             Contact Styles
 ==========================================*/
-#contactus{
-    background:url(../img/Background3.png) no-repeat;
+#page{
+    background:url(../img/Background4.png) no-repeat;
     background-size:100%;
     height: auto;
 }
 
 
-#contactform .container .form-control{
+#pageform .container .form-control{
     border-color:black;
 }
 
-#contactus .container-fluid h1{
+#page .container-fluid h1{
     padding-top: 195px;
     padding-bottom: 120px; 
     text-align: center;
 }
 
-#contactform .container{
+#pageform .container{
     margin: 0px 350px;
     width: auto;
 }
 
-
-#contactform .container .set{
+#pageform .container .set{
     padding-right: 0px;
     padding-left: 0px;
     margin-bottom: 1.5rem;
     margin-top: 1.5rem;
 }
 
-#contactform button{
+#pageform button{
     border-radius:0rem;
     background-color:black;
     border-color:black;
@@ -337,29 +336,72 @@ body{
     padding:0.375rem 1.5rem;
 }
 
-#contactform h4,
-#contactform p{
+#pageform h4,
+#pageform p{
     text-align: center;
 }
 
-#contactform #contactperson p{
+#pageform #contactperson p{
     margin-bottom: 0px;
     text-align: left;
 }
 
-#contactform #contactperson{
+#pageform #contactperson{
     margin-bottom: 70px;
     margin-top: 30px;
 }
 
-#contactform label{
+#pageform label{
     font-family: "PNovareg";
     font-size: 14pt;
 }
 
-#contactform #text{
+#pageform #text{
     margin:75px 0px;
     font-family: "PNovareg";
+}
+
+/* About */
+#pageform .container#about{
+    margin: 150px 250px;
+}
+
+#pageform #about img{
+    width: 30;
+}
+
+#pageform #accordionAbout .card-header{
+    padding: 0;
+    margin-bottom: 0;
+    background-color: #000000;
+    border-bottom: 0;
+}
+
+#pageform #accordionAbout .card,
+#pageform #accordionAbout .card-header:first-child{
+    border-radius: 0;
+    border: 0;
+    margin-top: 10;
+    margin-bottom: 10;
+}
+
+#pageform #accordionAbout .card p{
+    font-size: 15pt;
+    color: white;
+    margin-bottom: 0;
+    text-align: left;
+}
+
+#pageform #accordionAbout .card .row{
+    padding-bottom: 5px;
+    padding-top: 5px;
+    padding-left: 20%;
+}
+
+#pageform #accordionAbout .btn{
+    padding: 6px 0px;
+    margin: 0px 150px;
+    display: flex;
 }
 
 /*========================================
@@ -421,4 +463,23 @@ layar kecil
     #foot .container-fluid p{
         margin-left: 25px;
     }
+}
+
+/* Filter */
+
+.grayscale{
+	filter: grayscale(100%); 
+	-webkit-filter: grayscale(100%);
+	-moz-filter: grayscale(100%);
+	-ms-filter: grayscale(100%);
+	-o-filter: grayscale(100%);
+	filter: url("data:image/svg+xml;utf8,<svg xmlns=\'http://www.w3.org/2000/svg\'><filter id=\'grayscale\'><feColorMatrix type=\'matrix\' values=\'0.3333 0.3333 0.3333 0 0 0.3333 0.3333 0.3333 0 0 0.3333 0.3333 0.3333 0 0 0 0 0 1 0\'/></filter></svg>#grayscale"); /* Firefox 3.5+ */
+}
+.grayscale:hover{
+	filter: grayscale(0%); 
+	-webkit-filter: grayscale(0%);
+	-moz-filter: grayscale(0%);
+	-ms-filter: grayscale(0%);
+	-o-filter: grayscale(0%);
+	filter: url("data:image/svg+xml;utf8,<svg xmlns=\'http://www.w3.org/2000/svg\'><filter id=\'grayscale\'><feColorMatrix type=\'matrix\' values=\'0.ffff 0.ffff 0.ffff 0 0 0.ffff 0.ffff 0.ffff 0 0 0.ffff 0.ffff 0.ffff 0 0 0 0 0 1 0\'/></filter></svg>#grayscale"); /* Firefox 3.5+ */
 }
