--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -294,8 +294,8 @@ body{
     background:url(../img/Background4.png) no-repeat;
     background-size:100%;
     height: auto;
+    background-position-y: 70px;
 }
-
 
 #pageform .container .form-control{
     border-color:black;
@@ -396,7 +396,11 @@ body{
 #pageform #accordionAbout .card .row{
     padding-bottom: 5px;
     padding-top: 5px;
-    padding-left: 20%;
+    padding-left: 15%;
+}
+
+#pageform #accordionAbout .card .row .col-sm-4{
+    padding-left: 10%;
 }
 
 #pageform #accordionAbout .btn{
